// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdminUsers > snapshot: cpi-admin persona > matches structural snapshot 1`] = `
{
  "buttons": [],
  "headings": [
    "User Management",
  ],
  "links": [],
}
`;

exports[`AdminUsers > snapshot: devops persona > matches structural snapshot 1`] = `
{
  "buttons": [],
  "headings": [
    "Access Denied",
  ],
  "links": [],
}
`;

exports[`AdminUsers > snapshot: tenant-admin persona > matches structural snapshot 1`] = `
{
  "buttons": [],
  "headings": [
    "Access Denied",
  ],
  "links": [],
}
`;

exports[`AdminUsers > snapshot: viewer persona > matches structural snapshot 1`] = `
{
  "buttons": [],
  "headings": [
    "Access Denied",
  ],
  "links": [],
}
`;
